--- a/README
+++ b/README
@@ -1,1 +1,25 @@
+safe-string : Sam Thomas <s@ghost.sh>
+******************************************************************************
 Library ensuring safety of string operations in C.
+
+TODO:
+------------------------------------------------------------------------------
+safe_string_replace :
+	http://www.php.net/manual/en/function.str-replace.php
+safe_string_pad :
+	http://www.php.net/manual/en/function.str-pad.php
+safe_string_segment_length : 
+	http://www.php.net/manual/en/function.strcspn.php
+	http://www.php.net/manual/en/function.strspn.php
+safe_string_locate : 
+	http://www.php.net/manual/en/function.strstr.php
+safe_string_locate_set : (first occurance of element from given set)
+	http://www.php.net/manual/en/function.strpbrk.php
+safe_string_reverse :
+	http://www.php.net/manual/en/function.strrev.php
+safe_string_token_split :
+	http://www.php.net/manual/en/function.strtok.php
+safe_string_substring_replace :
+	http://www.php.net/manual/en/function.substr-replace.php
+safe_string_translate :
+	http://www.php.net/manual/en/function.strtr.php
